Fix details text to fit on mobile

--- a/athensreport/static/css/app.css
+++ b/athensreport/static/css/app.css
@@ -799,8 +799,7 @@ a:hover {
 }
 
 .interviews-details-text {
-    /*412*/
-    height: 362px;
+    height: 342px;
 }
 
 #details-script {
